# college-project-backend

./: .gitignore  README.md  compose.yaml  pyproject.toml
src/: config.py  exceptions.py  init_setups.py  mail.py  main.py  mongo.py  redis.py
src/gifts/: exceptions.py  router.py  schemas.py  service.py
src/quizes/: exceptions.py  router.py  schemas.py  service.py
src/tokens/: dependencies.py  exceptions.py  router.py  schemas.py  service.py
src/users/: dependencies.py  exceptions.py  router.py  schemas.py  service.py
templates/: email_validation.html
